--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="header flex">
+        <div class="header bg-grey   flex">
             <div class="logo">
                 <p class="text_big"><span class="text_orange">I</span>nst</p>
                 <div class="text_big logo_flex">
@@ -85,13 +85,13 @@
                 </div>
             </div>
         </div>
-        <div class="header2 bg-black flex">
+        <div class="header bg-black flex">
             <a href="#">Каталог товаров</a>
             <a href="#">О компании</a>
             <a href="#">Акции</a>
             <a href="#">хиты сезона</a>
             <a href="#">новинки</a>
-            <ul>
+            <ul class="header_icon flex">
                 <li>
                     <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -122,15 +122,13 @@
             </ul>
             <div class="">
                 <div class="search-container">
-                    <input type="text" id="search-input" placeholder="Поиск по каталогу">
-                    <button class="button1" onclick="performSearch()">Найти</button>
+                    <input class="search-input" type="text" id="search-input" placeholder="Поиск по каталогу">
+                    <!-- <button class="button1" onclick="performSearch()">Найти</button> -->
                 </div>
-
-                <div id="search-results">
+                <div class="search-results" id="search-results">
                     <!-- Результаты поиска будут отображены здесь -->
                 </div>
             </div>
-
         </div>
     </header>
     <script src="script.js"></script>
