fix card width product

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <p class="text_big"><span class="text_orange">I</span>nst</p>
                 <div class="text_big logo_flex">
                     <div class="text_logo"></div>
-                    <div class="">roo<span class="text_orange">m</span></div>
+                    <div>roo<span class="text_orange">m</span></div>
                 </div>
             </div>
             <p>Время работы: 10:00-20:00</p>
-            <div class="">
+            <div>
                 <p>+7 495 120-32-14</p>
                 <p>Заказать звонок</p>
             </div>
@@ -75,7 +75,7 @@
                         </svg>
                     </div>
                 </div>
-                <div style="margin-left: 20px;">
+                <div class="indent_bottom">
                     <p>Товаров на сумму</p>
                     <p>2 000 ₽</p>
                 </div>
@@ -116,7 +116,7 @@
                     </svg>
                 </li>
             </ul>
-            <div class="">
+            <div>
                 <div class="search-container">
                     <input class="search-input" type="text" id="search-input" placeholder="Поиск по каталогу">
                     <!-- <button class="button1" onclick="performSearch()">Найти</button> -->
@@ -129,9 +129,8 @@
     <main class="indent-top bg-main">
         <div class="section-1 flex bg-grey ">
             <div class="block">
-                <p style="font-size: 2vw;" class="block_txt">DeWALT - Инструмент <br> с настоящим характером</p>
-                <img style="width: 95%;
-                height: 94.4%;" src="/img/section-1/пила.jpg" alt="">
+                <p class="block_txt block_txt_big">DeWALT - Инструмент <br> с настоящим характером</p>
+                <img id="section_1_img_1" src=" /img/section-1/пила.jpg" alt="">
                 <div class="section_button">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5 12L19 12" stroke="white" stroke-width="2" stroke-linecap="round"
@@ -143,8 +142,7 @@
             </div>
             <div class="block">
                 <p class="block_txt">Акции</p>
-                <img style="width: 90%;
-                height: 94.4%;" src="/img/section-1/ключ.jpg" alt="">
+                <img id="section_1_img_2" src="/img/section-1/ключ.jpg" alt="">
                 <div class="section_button">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5 12L19 12" stroke="white" stroke-width="2" stroke-linecap="round"
@@ -154,7 +152,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="">
+            <div>
                 <div class="block">
                     <p class="block_txt">Новое поступление</p>
                     <img src="/img/section-1/краска.jpg" alt="">
@@ -212,10 +210,10 @@
                 <p>Эмаль Condor ПФ-115 жёлтая <br>1,8 кг</p>
                 <div class="flex content-1 content-2 txt_price">
                     <div class="flex">
-                        <p style="font-weight: 600;">
+                        <p class="text_card">
                             500 ₽
                         </p>
-                        <p style="color:#DEDBDB ;"><s> 720 ₽</s></p>
+                        <p class="text_clr"><s> 720 ₽</s></p>
                     </div>
                     <div class="flex content-2">
                         <p>
@@ -227,8 +225,8 @@
                             в наличии
                         </p>
 
-                        <svg style="position: relative; top: 16px; left: 1vw;" width="60" height="56"
-                            viewBox="0 0 60 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="icon_price" width="60" height="56" viewBox="0 0 60 56" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M0.5 0.5H55C57.4853 0.5 59.5 2.51472 59.5 5V55.5H5C2.51472 55.5 0.5 53.4853 0.5 51V0.5Z"
                                 stroke="#F05A00" />
