--- a/index.html
+++ b/index.html
@@ -954,6 +954,29 @@
                 </div>
             </div>
         </div>
+        <div class="bg-grey ">
+            <h1 class="block_txt_big txt_slider container">Наши бренды</h1>
+            <div class="flex container_3 content_4 container_2 ">
+
+                <svg class="arrow" width="40" height="40" viewBox="0 0 40 40" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <rect width="40" height="40" rx="20" fill="white" />
+                    <path d="M23 27L16 20L23 13" stroke="black" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg>
+                <div class="slide_brand"><img src="/img/slieder-1/image 324.jpg" alt=""></div>
+                <div class="slide_brand"><img src="/img/slieder-1/image 324.jpg" alt=""></div>
+                <div class="slide_brand"><img src="/img/slieder-1/image 324.jpg" alt=""></div>
+                <div class="slide_brand"><img src="/img/slieder-1/image 324.jpg" alt=""></div>
+                <div class="slide_brand"><img src="/img/slieder-1/image 324.jpg" alt=""></div>
+                <svg class="rotate_180 arrow" width="40" height="40" viewBox="0 0 40 40" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <rect width="40" height="40" rx="20" fill="white" />
+                    <path d="M23 27L16 20L23 13" stroke="black" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg>
+            </div>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
