fix name classes

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
     </header>
     <main class="indent-top bg-main">
-        <div class="section-1 flex bg_grey ">
+        <div class="section_1 flex bg_grey ">
             <div class="block">
                 <p class="block_txt block_txt_big">DeWALT - Инструмент <br> с настоящим характером</p>
                 <img id="section_1_img_1" src=" /img/section-1/пила.jpg" alt="">
