--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
         </div>
     </header>
-    <main class="indent-top bg-main">
+    <main class="indent_top bg-main">
         <div class="section_1 flex bg_grey ">
             <div class="block">
                 <p class="block_txt block_txt_big">DeWALT - Инструмент <br> с настоящим характером</p>
