--- a/basket.html
+++ b/basket.html
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="header bg-black flex">
-            <a href="#">Каталог товаров</a>
+            <a href="index.html">Каталог товаров</a>
             <a href="#">О компании</a>
             <a href="#">Акции</a>
             <a href="#">Хиты сезона</a>
@@ -152,8 +152,31 @@
                         <p>Краски и эмали</p>
                         <p>Эмаль Condor ПФ-115</p>
                     </div>
+                    <div class="txt_width">
+                        <p><s class="text_grey"> 1620 ₽</s></p>
+                        <p>1500 ₽</p>
+                    </div>
+                    <div class="flex quantity">
+                        <p class="minus">-</p>
+                        <p class="border">1</p>
+                        <p class="plus">+</p>
+                    </div>
+                    <p>1 000 ₽</p>
+                    <div class="cross">
+                        <p>+</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="basket flex ">
+                <img class="basket_img" src="/img/card with product/Rectangle 20.png" alt="">
+                <div class="basket_content">
                     <div>
-                        <p><s> 620 ₽</s></p>
+                        <p class="orange">Краски и эмали</p>
+                        <p>Эмаль Condor ПФ-115</p>
+                    </div>
+                    <div class="txt_width">
+                        <p><s class="text_grey"> 620 ₽</s></p>
                         <p>500 ₽</p>
                     </div>
                     <div class="flex quantity">
@@ -176,8 +199,10 @@
                         <p>Эмаль Condor ПФ-115</p>
                     </div>
                     <div>
-                        <p><s> 620 ₽</s></p>
-                        <p>500 ₽</p>
+                        <div class="txt_width">
+                            <p><s class="text_grey"> 1620 ₽</s></p>
+                            <p>15000 ₽</p>
+                        </div>
                     </div>
                     <div class="flex quantity">
                         <p class="minus">-</p>
@@ -198,32 +223,9 @@
                         <p>Краски и эмали</p>
                         <p>Эмаль Condor ПФ-115</p>
                     </div>
-                    <div>
-                        <p><s> 620 ₽</s></p>
-                        <p>500 ₽</p>
-                    </div>
-                    <div class="flex quantity">
-                        <p class="minus">-</p>
-                        <p class="border">1</p>
-                        <p class="plus">+</p>
-                    </div>
-                    <p>1 000 ₽</p>
-                    <div class="cross">
-                        <p>+</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="basket flex">
-                <img class="basket_img" src="/img/card with product/Rectangle 20.png" alt="">
-                <div class="basket_content">
-                    <div>
-                        <p>Краски и эмали</p>
-                        <p>Эмаль Condor ПФ-115</p>
-                    </div>
-                    <div>
-                        <p><s> 620 ₽</s></p>
-                        <p>500 ₽</p>
+                    <div class="txt_width">
+                        <p><s class="text_grey"> 1620 ₽</s></p>
+                        <p>15000 ₽</p>
                     </div>
                     <div class="flex quantity">
                         <p class="minus">-</p>
