--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Интернет магазин</title>
-    <link rel="shortcut icon" href="/img/иконка сайта.png" />
+    <link rel="shortcut icon" href="./img/иконка сайта.png" />
     <!-- <link rel="shortcut icon" href="/img/Гигачад.jpg" /> -->
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
